Development Header Section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <header class="header">
         <nav class="heaedr-nav">
             <div class="header-container">
+
                 <!--! Header Logo -->
                 <a href="#" class="header__logo">
                     <img src="./images/logo-light.svg" class="header__logo-img" alt="LOGO">
@@ -50,6 +51,7 @@
 
                 <!--! Header Content -->
                 <div class="header__content">
+
                     <!--! Header Category -->
                     <ul class="header__content-category">
                         <li class="header__content-category__item">
@@ -248,10 +250,149 @@
                                 <svg>
                                     <use xlink:href="#chevron-down"></use>
                                 </svg>
-                                <span>صفحه اصلی</span>
+                                <span>مگامنو</span>
                             </a>
 
-                            <ul class="header__content-menu__item-submenu"></ul>
+                            <div class="header__content-menu__item-submenu__dropdown-menu__wrapper">
+                                <div class="header__content-menu__item-submenu__dropdown-menu">
+                                    <!-- DropDown Column Item -->
+                                    <div class="header__content-menu__item-submenu__dropdown-menu__col">
+                                        <h6>شروع کن</h6>
+                                        <hr>
+                                        <ul>
+                                            <li>
+                                                <a href="#">اینستاگرام مارکتینگ</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">تیبلغ نویسی</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">سرچ کنسول</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">جذب ترافیک موثر</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">افزایش فروش</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">ویدیو مارکتینگ</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">استراتژی تولید محتوا</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">آموزش GTmetrix</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">آموزش Alex</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">سئو و بهینه سازی</a>
+                                            </li>
+
+                                            <li>
+                                                <a href="#">اصول قرارداد نویسی</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+
+                                    <!-- DropDown Column Item -->
+                                    <div class="header__content-menu__item-submenu__dropdown-menu__col">
+                                        <h6>میزان رتبه</h6>
+                                        <hr>
+
+                                        <!-- DropDown Item -->
+                                        <div>
+                                            <a href="#">
+                                                تماس با مدیریت
+                                            </a>
+                                            <p>
+                                                با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+                                            </p>
+                                        </div>
+
+                                        <!-- DropDown Item -->
+                                        <div>
+                                            <a href="#">مسیر فروش</a>
+                                            <p>
+                                                با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+                                            </p>
+                                        </div>
+
+                                        <!-- DropDown Item -->
+                                        <div>
+                                            <a href="#">امنیت و مجوز</a>
+                                            <p>
+                                                با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.
+                                            </p>
+                                        </div>
+                                    </div>
+
+                                    <!-- DropDown Column Item -->
+                                    <div class="header__content-menu__item-submenu__dropdown-menu__col">
+                                        <h6>مدرک</h6>
+                                        <hr>
+
+                                        <!-- DropDown Item -->
+                                        <div>
+                                            <h2>
+                                                <img src="./images/google.png" alt="Google">
+                                            </h2>
+                                            <div>
+                                                <a href="#">گواهی سئو گوگل</a>
+                                                <p>بدون پیش نیاز</p>
+                                            </div>
+                                        </div>
+
+                                        <!-- DropDown Item -->
+                                        <div>
+                                            <h2>
+                                                <img src="./images/linkedin.png" alt="Google">
+                                            </h2>
+                                            <div>
+                                                <a href="#">مدیر توسعه کسب و کار (BDE)</a>
+                                                <p>بدون پیش نیاز</p>
+                                            </div>
+                                        </div>
+
+                                        <!-- DropDown Item -->
+                                        <div>
+                                            <h2>
+                                                <img src="./images/facebook.png" alt="Google">
+                                            </h2>
+                                            <div>
+                                                <a href="#">بازاریابی شبکه های اجتماعی فیس بوک</a>
+                                                <p>مشاوره تخصصی</p>
+                                            </div>
+                                        </div>
+
+                                        <!-- DropDown Item -->
+                                        <div>
+                                            <h2>
+                                                <img src="./images/basketball-ball.png" alt="Google">
+                                            </h2>
+                                            <div>
+                                                <a href="#">طراحی گرافیکی خلاقانه</a>
+                                                <p>بدون پیش نیاز</p>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
+                                    <!-- DropDown Column Item -->
+                                    <div class="header__content-menu__item-submenu__dropdown-menu__col"></div>
+                                </div>
+                            </div>
                         </li>
 
                         <!-- Item 5 -->
