DEvelopment Header Section

--- a/index.html
+++ b/index.html
@@ -283,7 +283,8 @@
                                                 <hr>
 
                                                 <div>
-                                                    <img src="https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-01.svg" alt="License">
+                                                    <img src="https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-01.svg"
+                                                        alt="License">
 
                                                     <div>
                                                         <a href="#">مدرک بین المللی سطح مبتدی</a>
@@ -293,7 +294,8 @@
 
 
                                                 <div>
-                                                    <img src="https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-02.svg" alt="License">
+                                                    <img src="https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-02.svg"
+                                                        alt="License">
 
                                                     <div>
                                                         <a href="#">مدرک بین المللی سطح متوسط</a>
@@ -303,17 +305,19 @@
 
 
                                                 <div>
-                                                    <img src="	https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-03.svg" alt="License">
+                                                    <img src="	https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-03.svg"
+                                                        alt="License">
 
                                                     <div>
-                                                        <a href="#">مدرک بین المللی  زبـان</a>
+                                                        <a href="#">مدرک بین المللی زبـان</a>
                                                         <p>دانشکده علوم پزشکی</p>
                                                     </div>
                                                 </div>
 
 
                                                 <div>
-                                                    <img src="	https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-01.svg" alt="License">
+                                                    <img src="	https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-01.svg"
+                                                        alt="License">
 
                                                     <div>
                                                         <a href="#">مدرک بین المللی زبـان</a>
@@ -323,7 +327,8 @@
 
 
                                                 <div>
-                                                    <img src="https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-04.svg" alt="License">
+                                                    <img src="https://fixdevelopdemo.ir/theme/eduport/rtl/assets/images/client/uni-logo-04.svg"
+                                                        alt="License">
 
                                                     <div>
                                                         <a href="#">مدرک بین المللی سطح پیشرفته</a>
@@ -332,11 +337,110 @@
                                                 </div>
                                             </div>
 
-                                            <div></div>
+                                            <div>
+                                                <h6>در حال ثبت نام</h6>
+                                                <hr>
+                                                <!-- DropDown Item -->
+                                                <div class="header__content-menu__item-submenu__dropdown-menu__col-doc">
+                                                    <h2
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__title">
+                                                        <img src="./images/google.png" alt="Google"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__img">
+                                                    </h2>
+                                                    <div
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__content">
+                                                        <a href="#"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-link">گواهی
+                                                            سئو گوگل</a>
+                                                        <p
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-text">
+                                                            بدون پیش نیاز</p>
+                                                    </div>
+                                                </div>
+
+                                                <!-- DropDown Item -->
+                                                <div class="header__content-menu__item-submenu__dropdown-menu__col-doc">
+                                                    <h2
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__title">
+                                                        <img src="./images/linkedin.png" alt="Google"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__img">
+                                                    </h2>
+                                                    <div
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__content">
+                                                        <a href="#"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-link">
+                                                            مدیر توسعه کسب و کار (BDE)\
+                                                        </a>
+                                                        <p
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-text">
+                                                            بدون پیش نیاز</p>
+                                                    </div>
+                                                </div>
+
+                                                <!-- DropDown Item -->
+                                                <div>
+                                                    <h2
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__title">
+                                                        <img src="./images/facebook.png" alt="Google"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__img">
+                                                    </h2>
+                                                    <div
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__content">
+                                                        <a href="#"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-link">
+                                                            بازاریابی شبکه های اجتماعی فیس بوک
+                                                        </a>
+                                                        <p
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-text">
+                                                            مشاوره تخصصی</p>
+                                                    </div>
+                                                </div>
+
+                                                <!-- DropDown Item -->
+                                                <div>
+                                                    <h2
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__title">
+                                                        <img src="./images/basketball-ball.png" alt="Google"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__img">
+                                                    </h2>
+                                                    <div
+                                                        class="header__content-menu__item-submenu__dropdown-menu__col-doc__content">
+                                                        <a href="#"
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-link">
+                                                            طراحی گرافیکی خلاقانه
+                                                        </a>
+                                                        <p
+                                                            class="header__content-menu__item-submenu__dropdown-menu__col-doc__content-text">
+                                                            بدون پیش نیاز</p>
+                                                    </div>
+                                                </div>
+
+                                            </div>
                                         </div>
 
                                         <!-- Advertisement -->
-                                        <div></div>
+                                        <div>
+                                            <div>
+                                                <div>
+                                                    <!-- Body -->
+                                                    <div>
+                                                        <!-- Title -->
+                                                        <h5>
+                                                            دسترسی به 25 هزار دوره آنلاین از 120 موسسه، از امروز شروع
+                                                            کنید!
+                                                        </h5>
+                                                        <p>
+                                                            در اینجا توضیحاتی در مورد ویژگی های برتر ارائه شده است که به
+                                                            کاربران امکان می دهد از مزایایی برخوردار شوند و در هزینه های
+                                                            زیادی صرفه جویی کنند
+                                                        </p>
+
+                                                        <!-- Button -->
+                                                        <a href="#">خرید حرفه ای</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
 
